# blog-codes

./: README.md
canny-performance-part1/: canny-optimized.c  canny-original.c  canny-run.sh
canny-performance-part2/: canny-optimized.c  canny-original.c  canny-run.sh
loop-fission-unvectorizable/: compile.sh  loop-fission-unvectorizable.c
loop-unswitching/: calculation-unswitched.h  loop-unswitching-experiment.c  loop-unswitching.c
loop-unswitching-experiment/: calculation-default.h  calculation-unswitched.h  compile-and-run-experiment.sh  loop-unswitching-experiment.c  utils.h
loop-unswitching-introduction/: compile-and-run.sh  loop-unswitching.c  utils.h
precision-division/: precision-division.c  utils.h
precision-math-errno/: Makefile  compile.sh  precision-math-errno.c
precision-omp-simd/: compile.sh  precision-omp-simd.c
roofline-introduction/: CMakeLists.txt  roofline-test.c
unvectorizable-branchless-loops/: compile.sh  unvectorizable-branchless-loops.c
ways-speedup/: accelerator-example.c  branch-prediction-example.c  compile.sh  many-ways-gpu.c  many-ways.c  memory-example.c  multithreading-example.c  utils.h  vectorization-example.c
